--- a/quads_self_schedule.yml
+++ b/quads_self_schedule.yml
@@ -16,7 +16,7 @@
         fail_msg: >-
           Mandatory variable 'workload_name' was not provided.
           Please run the playbook with '-e workload_name=' per the docs.
-          Make sure you wrap the 'workload_name' value in single quotes
+          Make sure you wrap the 'workload_name' value in single quotes.
           (See examples)
       changed_when: false
 
